refactor: use toList in NginxLogParser.parse